k8s/base/import-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: import-consumer
    namespace: flashcards-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: import-consumer
    template:
        metadata:
            labels:
                app: import-consumer
        spec:
            containers:
                - name: import-consumer
                  image: flashcards-backend:latest
                  imagePullPolicy: IfNotPresent
                  command: ['npm', 'run', 'worker:start']
                  resources:
                      requests:
                          cpu: '100m'
                          memory: '128Mi'
                      limits:
                          cpu: '300m'
                          memory: '256Mi'
