k8s/base/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
    namespace: flashcards-app
spec:
    serviceName: postgres
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:14
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-storage
                        mountPath: /var/lib/postgresql/data
                  readinessProbe:
                      tcpSocket:
                          port: 5432
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      tcpSocket:
                          port: 5432
                      initialDelaySeconds: 15
                      periodSeconds: 20
                  resources:
                      requests:
                          cpu: '100m'
                          memory: '128Mi'
                      limits:
                          cpu: '500m'
                          memory: '512Mi'
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                      claimName: postgres-pvc
