k8s/base/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq
    namespace: flashcards-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:3-management
                  ports:
                      - containerPort: 5672
                      - containerPort: 15672
                  readinessProbe:
                      tcpSocket:
                          port: 5672
                      initialDelaySeconds: 10
                      periodSeconds: 10
                  livenessProbe:
                      tcpSocket:
                          port: 5672
                      initialDelaySeconds: 20
                      periodSeconds: 20
                  resources:
                      requests:
                          cpu: '100m'
                          memory: '128Mi'
                      limits:
                          cpu: '500m'
                          memory: '512Mi'
