k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: flashcards-app
spec:
    selector:
        app: backend
    ports:
        - port: 8080
          targetPort: 8080
          protocol: TCP
    type: ClusterIP
