k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: flashcards-app
spec:
    selector:
        app: postgres
    ports:
        - port: 5432
          targetPort: 5432
          protocol: TCP
    type: ClusterIP
