k8s/base/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    namespace: flashcards-app
spec:
    selector:
        app: rabbitmq
    ports:
        - name: amqp
          port: 5672
          targetPort: 5672
          protocol: TCP
        - name: management
          port: 15672
          targetPort: 15672
          protocol: TCP
    type: ClusterIP
