k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: flashcards-app-ingress
    namespace: flashcards-app
spec:
    ingressClassName: nginx
    rules:
        - host: flashcards.local
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 8080
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
